--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
 /*background: #7c6526;*/
-background: #034d22 url("../img/305207490.jpg") no-repeat center center fixed;
+background: #034d22 url("../img/image_telephone.jpg") no-repeat center center fixed;
 background-size: auto;
 /*background-size: contain;*/
 /*background: #7c6526; - Old browsers */
